--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "twilio": "^5.8.0",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js",
     "xlsx": "^0.18.5"
   },
   "name": "backend",
