--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@mui/icons-material": "^7.3.7",
     "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
