--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@mui/icons-material": "^7.3.7",
+    "@tailwindcss/vite": "^4.1.18",
     "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -10,6 +11,7 @@
     "node-fetch": "^2.6.12",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "tailwindcss": "^4.1.18",
     "twilio": "^5.8.0",
     "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js",
     "xlsx": "^0.18.5"
