--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "qrcode-terminal": "^0.12.0",
     "tailwindcss": "^4.1.18",
     "twilio": "^5.8.0",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js",
+    "whatsapp-web.js": "^1.34.6",
     "xlsx": "^0.18.5"
   },
   "name": "backend",
