--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-fetch": "^2.6.12",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "react-webcam": "^7.2.0",
     "tailwindcss": "^4.1.18",
     "twilio": "^5.8.0",
     "whatsapp-web.js": "^1.34.6",
