--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "notistack": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-webcam": "^7.2.0",
     "tailwindcss": "^4.1.18"
   }
 }
