--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "react-webcam": "^7.2.0",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "twilio": "^5.8.0",
     "whatsapp-web.js": "^1.34.6",
