--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-  "captionTemplate": "Dear Mr {name}\nThank You for your Presence\n\n📍*Your Seat No :* {seat}\n\nTeam Market Quality"
+  "captionTemplate": "Dear {name} San\nThank You for your Presence\n\n📍*Your Seat No :* {seat}\n\nTeam Market Quality"
 }
